--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -3,11 +3,11 @@ spring:
     activate:
       on-profile: prod
   jpa:
-    database-platform: org.hibernate.dialect.MariaDB103Dialect
     hibernate.ddl-auto: update
     show-sql: true
     properties:
       hibernate:
+        dialect: org.hibernate.dialect.MariaDBDialect
         format_sql: true
   datasource:
     driver-class-name: org.mariadb.jdbc.Driver
@@ -16,4 +16,5 @@ spring:
     url: jdbc:mariadb://${DB_HOST}:${DB_PORT}/${DB}?allowPublicKeyRetrieval=true&useSSL=false&serverTimezone=Asia/Seoul
     username: root
     password: ${DB_PASSWORD}
+
 
